# abics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/base64/: base64.c  base64.h  base64_test.c
include/camera/: camera.c  camera.h  camera_test.c
include/serial_port/: serial_port.c  serial_port.h  serial_port_test.c
src/: abics.c  abics.h  mqtt_config.h
